# SHA-512

./: CMakeLists.txt  README.md  instructions.txt  main.cpp  makefile
sha512_utils/: constants.hpp  logical_functions.cpp  logical_functions.hpp  preprocessing.cpp  preprocessing.hpp  sha512.cpp  sha512.hpp  types.hpp
tests/: python_tests.py  sha_testvectors.json
